// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics appends basic tags 1`] = `
"
            <!doctype html>
            <html>
                <head>
                    
                <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"16x16\\" href=\\"/favicon-16x16.png\\"></head>
                <body>
                </body>
            </html>
        "
`;

exports[`basics does nothing if a link tag does not exist 1`] = `
"
            <!doctype html>
            <html>
                <head>
                </head>
                <body>
                </body>
            </html>
        "
`;
